resources/externalname-service.yml
apiVersion: v1
kind: Service
metadata:
  name: external-test
spec:
  type: ExternalName
  externalName: google.com
